# f1-grand-prix-prediction

./: .gitignore  README.md  display_results.py  f1_grand_prix_predictor.py  main.py  prediction_results.csv  pyproject.toml  race_inputs.csv  report_predictions.py
f1_prediction/: __init__.py  feature_engineering.py  jolpica.py  predictor.py  reporting.py
src/core/: app.py  feature_engineering.py  jolpica.py  models.py  predictor.py  reporting.py
src/core/abstract/: interfaces.py
